# SDTM_Project2

./: CMakeLists.txt
examples/: test1.c  test2.c
lib/: CMakeLists.txt  ploter.py  test1.py  test2.py  tp4.c  tp4.h  tp4.i
py_files/: ploter.py  test1.py  test2.py
