cmake_minimum_required(VERSION 3.10)
add_library(tp4 SHARED tp4.c)

set_target_properties( tp4  PROPERTIES
          VERSION 1.3.4
	  SOVERSION 1
	  CXXFLAGS -Wall
	)
target_link_libraries(tp4 m)
FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})
FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})



SET_SOURCE_FILES_PROPERTIES(tp4.i PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_LIBRARY(tp4 LANGUAGE python SOURCES tp4.i tp4.c)
SWIG_LINK_LIBRARIES(tp4 ${PYTHON_LIBRARIES} )



